--- a/package.json
+++ b/package.json
@@ -10,9 +10,12 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@react-three/fiber": "^8.16.8",
     "@splidejs/react-splide": "^0.7.12",
+    "@types/three": "^0.167.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "three": "^0.167.0",
     "unsplash-js": "^7.0.19"
   },
   "devDependencies": {
